--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,16 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ ubuntu-18.04, ubuntu-20.04 ]
     env:
       CMAKE_C_COMPILER: gcc
     steps:
       - uses: actions/checkout@v2
-      - name: install dependencies
+      - name: install dependencies on ubuntu
+        if: ${{ startsWith(matrix.os, 'ubuntu') }}
         run: sudo apt-get install -y libharfbuzz-dev
       - name: build
         run: |
